--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGODB_URI = 'mongodb+srv://debasishbihari:debasishbihari@cluster0.ocr8wsm.mongodb.net'
+CLERK_WEBHOOK_SECRET = 'whsec_ZMyDplQZcJjM9BpZZT3THu9iPI6Z65qI
